--- a/wordpress/map.jinja
+++ b/wordpress/map.jinja
@@ -2,14 +2,14 @@
 {%- load_yaml as server_common %}
 default:
   pkgs:
-  - php7.0-mysql
-  - php7.0-gd
-  - php7.0-curl
-  - php7.0-intl
-  - php7.0-xmlrpc
-  - php7.0-mcrypt
-  - php7.0-dev
-  - libapache2-mod-php7.0
+  - php-mysql
+  - php-gd
+  - php-curl
+  - php-intl
+  - php-xmlrpc
+  - php-mcrypt
+  - php-dev
+  - libapache2-mod-php
   dir:
     base: /srv/wordpress
   cli:
